--- a/app/src/main/res/layout/activity_ver_persona.xml
+++ b/app/src/main/res/layout/activity_ver_persona.xml
@@ -27,7 +27,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/TituloBarraVerPersona"
+                android:text="@string/titulo_barra_ver_persona"
                 android:layout_gravity="center"
                 android:textColor="@color/black"
                 android:textSize="18sp"
@@ -95,32 +95,29 @@
                     android:background="@color/white"
                     android:orientation="vertical">
 
-
                     <com.github.chrisbanes.photoview.PhotoView
                         android:id="@+id/id_imagen_persona_Act"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/colorBlanco"
+                        android:background="@color/color_blanco"
                         android:scaleType="center"
                         app:layout_constraintStart_toStartOf="parent">
-
-
                     </com.github.chrisbanes.photoview.PhotoView>
 
-                    <ImageButton
-                        android:id="@+id/btn_descargar_img"
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/floating_btn_descargar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
-
+                        android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginEnd="21dp"
-                        android:layout_marginRight="21dp"
-                        android:layout_marginBottom="6dp"
-                        app:srcCompat="@drawable/ic_descargar_img" />
-
+                        android:layout_margin="30dp"
+                        android:layout_marginBottom="485dp"
+                        android:clickable="true"
+                        app:backgroundTint="@color/color_btn_descarga"
+                        app:srcCompat="@drawable/img_descargar" />
 
                 </RelativeLayout>
             </LinearLayout>
