--- a/app/src/main/res/layout/cardview_item_listar_persona.xml
+++ b/app/src/main/res/layout/cardview_item_listar_persona.xml
@@ -19,7 +19,7 @@
             android:id="@+id/id_persona_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorBlanco"
+            android:background="@color/color_blanco"
             android:scaleType="centerCrop">
         </ImageView>
 
