--- a/app/src/main/res/layout/cardview_item_recomendado.xml
+++ b/app/src/main/res/layout/cardview_item_recomendado.xml
@@ -20,7 +20,7 @@
             android:id="@+id/id_recomendado_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorBlanco"
+            android:background="@color/color_blanco"
             android:scaleType="centerCrop"></ImageView>
 
 
