--- a/app/src/main/res/layout/cardview_item_home_categorias.xml
+++ b/app/src/main/res/layout/cardview_item_home_categorias.xml
@@ -30,7 +30,7 @@
             android:textColor="@color/black"
             android:textSize="10sp"
             android:textStyle="bold"
-            android:background="@color/color_cinta_card"
+            android:background="@color/white"
             android:gravity="center">
         </TextView>
 
