--- a/app/src/main/res/layout/activity_ver_persona.xml
+++ b/app/src/main/res/layout/activity_ver_persona.xml
@@ -18,7 +18,7 @@
             android:id="@+id/toolbar_verPersona"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:background="?attr/colorOnPrimary"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
             app:layout_constraintEnd_toEndOf="parent"
@@ -116,12 +116,11 @@
                         android:layout_margin="30dp"
                         android:layout_marginBottom="485dp"
                         android:clickable="true"
-                        app:backgroundTint="@color/color_btn_descarga"
+                        app:backgroundTint="@color/color_text_carview_btn_descargar"
                         app:srcCompat="@drawable/img_descargar" />
 
                 </RelativeLayout>
             </LinearLayout>
-
 
 
         </LinearLayout>
