--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#90CAF9</color>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
+    <color name="color_primary">#0091EA</color> <!-- Color barra toolbar superpuesta -->
+    <color name="purple_200">#40C4FF</color> <!-- Color barra Superior hora Toolbar -->
+    <color name="purple_500">#2962FF</color>
     <color name="purple_700">#090000</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFF</color>
     <color name="color_splash">#FFFFFF</color>
     <color name="color_blanco">#FFFFFFFF</color>
     <color name="color_negro">#FF000000</color>
-    <color name="color_gris">#ECE9E9</color>
-    <color name="color_cinta_card">#FFFFFF</color>
-    <color name="color_btn_descarga">#FF5722</color>
+    <color name="color_barra_superpuesta">#FF6D00</color>
+    <color name="color_barra_Hora">#FF40C4FF</color>
+    <color name="color_text_carview_btn_descargar">#FF40C4FF</color><!-- Color texto CarView y btn descargar -->
+
+
 </resources>
